# some-polynomials

./: CMakeLists.txt  E_2.cpp  E_3.cpp  PowSums.cpp  README.md  helibdemo.cpp
